--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.pathfinder.attackcalc"
         minSdk 26
-        targetSdk 31
-        versionCode 11
-        versionName "1.2"
+        targetSdk 34
+        versionCode 15
+        versionName "1.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,6 +39,7 @@ android {
             }
         }
     }
+    namespace 'com.pathfinder.attackcalc'
 }
 
 dependencies {
